# Interface_stage_2024

./: .gitignore  README.md  clean_thirdparty.sh
app/: .env  CMakeLists.txt  build.sh  clean_third_party.sh  execute.sh  run.sh
app/conan/: file.txt  profile.txt
app/document_root/css/: debug.css  main.css
app/document_root/js/: error.js  id.js  main.js
app/document_root/mzn/: a_new_personal_computer.mzn  movie_buffs_associated.mzn  pasta_and_wine.mzn
app/source/: config.hh  main.cpp
app/source/controllers/: Index.cpp  Index.hh
app/source/views/: index_view.csp
app/uploads/: file.csv
app/uploads/tmp/A7/: A77AF23AAC394BD99AC1D40054EE07D7
env/: Containerfile  build.sh  clean.sh  inspect.sh  kill.sh  root_copy.sh  run.sh
test/: gcd_session.json  load.sh  prime_session.json
